--- a/llm-foundry-env/conf-yamls/baseline-2.2B.yaml
+++ b/llm-foundry-env/conf-yamls/baseline-2.2B.yaml
@@ -278,9 +278,12 @@ log_to_console: true
 console_log_interval: 1ba
 
 callbacks:
-  # speed_monitor:
-  #   window_size: 10
+  speed_monitor:
+    window_size: 10
   lr_monitor: {}
+  optimizer_monitor:
+    log_optimizer_metrics: true
+    batch_log_interval: 1
   # memory_monitor: {}
   # runtime_estimator: {}
 
@@ -293,7 +296,7 @@ loggers:
     ignore_hyperparameters: []
   tensorboard:
     log_dir: ???
-    flush_interval: 100
+    flush_interval: 10
 
 # Checkpoint to local filesystem or remote object store
 save_interval: ???
